fixed minor styles in header (box-shadow wasn't visible) and added padding to Google-Links trigger

--- a/src/components/AppHeader/AppHeader.scss
+++ b/src/components/AppHeader/AppHeader.scss
@@ -30,4 +30,8 @@
   .user-skeleton {
     min-width: $app-header-user-skeleton-min-width;
   }
+
+  &-google-links-trigger {
+    margin: $app-header-google-links-trigger-margin;
+  }
 }
